# fire-smoke-detection

./: .gitignore  IMPLEMENTATION_PLAN.md  PHONE_CAMERA_MEDIAMTX_PLAN.md  README.md  pyproject.toml
.claude/: CLAUDE.md
ai-service/: config.yaml  requirements.txt
ai-service/app/: alert_logic.py  detector.py  main.py  publisher.py  snapshot.py  stream_reader.py
ai-service/tests/: conftest.py  test_alert_logic.py  test_detector.py  test_stream_reader.py
backend/: .env.example  requirements.txt
backend/app/: config.py  dependencies.py  main.py
backend/app/db/: __init__.py
backend/app/routers/: __init__.py  alerts.py  cameras.py  detections.py  health.py  incidents.py  settings.py
backend/app/schemas/: __init__.py  alerts.py  cameras.py  incidents.py  settings.py
backend/app/services/: __init__.py  alert_engine.py
backend/app/sockets/: __init__.py
backend/tests/: conftest.py  test_cameras.py  test_detections.py  test_health.py  test_incidents.py  test_settings.py  test_sockets.py
dashboard/: README.md  angular.json  package-lock.json  package.json
dashboard/src/: styles.css
dashboard/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.routes.ts
dashboard/src/app/core/models/: alert.model.ts  camera.model.ts  detection.model.ts  incident.model.ts  (+2 more)
dashboard/src/environments/: environment.development.ts  environment.ts
scripts/: start_all.sh  start_dev.sh  stop_all.sh  stop_dev.sh
shared/: pyproject.toml
shared/shared/: __init__.py  schemas.py
simulator/: mediamtx.yml  start_streams.sh
simulator/videos/: SOURCES.md
(+22 files in other folders)
