[project]
name = "fire-smoke-shared"
version = "0.1.0"
description = "Schemas shared between the AI service and the backend (single source of truth, never fork)"
requires-python = ">=3.11"
dependencies = ["pydantic>=2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]

# .pth-based editable installs so static analyzers (Pyright) resolve the package
[tool.hatch.build]
dev-mode-dirs = ["."]
